# cloudflare-dns-updater-c

./: CMakeLists.txt  LICENSE  README.md
main/cli/: CMakeLists.txt
main/cli/src/: cli_parser.h  main.c
main/cli/src/cmd/: check.h  definitions.h  update.h
main/lib/: CMakeLists.txt
main/lib/include/: args.h  buffer.h  cloudflare.h  http.h  logger.h  types.h
main/lib/src/: args.c  buffer.c  cloudflare.c  http.c  logger.c
main/test/: CMakeLists.txt
main/test/src/: greatest.h  main.c  test_args.h  test_buffer.h  test_cloudflare.h  test_logs.h
scripts/: build_and_run.sh  build_and_test.sh  configure.sh
